[gd_scene load_steps=2 format=3 uid="uid://c3r7jkfmyoagv"]

[ext_resource type="Script" path="res://Elements/Item Containers/container_dialog.gd" id="1_qljij"]

[node name="ContainerDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qljij")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Container"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/TitleBar"]
layout_mode = 2
text = "X "

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerInvGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ContainerInvGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[connection signal="button_up" from="VBoxContainer/TitleBar/CloseButton" to="." method="_on_close_button_button_up"]
